--- a/styles/main.css
+++ b/styles/main.css
@@ -8,3 +8,28 @@ ul.position-absolute {
     
     z-index:1;
 }
+
+#gallery img {
+    height: 75vw;
+    object-fit: cover;
+}
+
+.carousel-item img {
+    height: 60vw;
+    object-fit: cover;
+}
+
+@media (min-width: 576px) {
+    .carousel-item img {
+        height: 350px;
+    }
+    #gallery img {
+        height: 35vw;
+    }
+}
+
+@media (min-width: 992px) {
+    #gallery img {
+        height: 18vw;
+    }
+}
